# flow

./: .babelrc  .cirrus.yml  .flowconfig  .flowconfig[ignore]  .flowconfig[libs]  .flowconfig[untyped]  .gitattributes  .gitignore  .gitmodules  .jest-tool.config.js  .merlin  .ocamlformat  .ocamlformat.cfg.java  .prettierignore  .prettierrc.json  .travis-ci.sh  .travis.yml  00_config.ocp  404.html  Bingo Win  Booking  CNAME  CONTRIBUTING.md  Cadillac  Changelog  Changelog.md  Create-REACT_APP.JSX  FilePP-Module-API  Gatsby.js  Getting-Started  Informe de error  LICENSE  MakeFile  Makefile  NEXT.js  PATENTS  REACT_APP.JSX  REACT_APP@FLOW.JSX  README.md  README.win32  (+48 more)
hack/fsnotify/: dune
hack/heap/: TARGETS  dumbsqlite.ml  dune  globalStorage.ml  heap_string.ml  heap_string.mli  hh_assert.c  hh_assert.h  hh_fileinfo.c  hh_fileinfo.h  hh_shared.c  hh_shared.h  hh_shared_common.c  hh_shared_common.h  hh_shared_list.c  hh_shared_sqlite.c  hh_shared_sqlite.h  ident.ml  ident.mli  lib_dumbsqlite.c  local_id.ml  local_id.mli  prefix.ml  prefix.mli  sharedMem.ml  sharedMem.mli  shared_list.ml  value.ml  value.mli  workerCancel.ml  workerCancel.mli
hack/hhi/: .merlin  TARGETS  dune  hhi.ml  hhi.mli  hhi_elf.c  hhi_win32res.ml  hhi_win32res.mli  hhi_win32res_stubs.c
hack/procs/: .ocamlformat  TARGETS  bucket.ml  bucket.mli  dune  mem_profile.ml  mem_profile.mli  multiThreadedCall.ml  multiThreadedCall.mli  multiWorker.ml  multiWorker.mli  multiWorkerLwt.ml  multiWorkerLwt.mli  worker.ml  worker.mli  workerCollect.ml  workerController.ml  workerController.mli  workerControllerLwt.ml  workerControllerLwt.mli
hack/watchman/: dune  watchman.ml  watchman.mli  watchman_lwt.ml  watchman_lwt.mli  watchman_sig.ml  watchman_utils.ml
rust_port/: Cargo.toml  full_check_rust_port_todo_report.md  rust_port_status.md
rust_port/.claude/: .gitignore  porting-reminder.sh  settings.json
src/: .gitignore  caml_mutex_new.js  caml_thread_cleanup.js  caml_thread_initialize.js  dune  flow.ml  flow_dot_js.ml  flow_dot_js_wasm.js  flow_dot_js_wasm_packager.js
src/__tests__/: flow_dot_js_smoke_test.js
src/analysis/: bindings.ml  bindings.mli  dune  hoister.ml  hoister.mli  property_assignment.ml  property_assignment.mli  scope_api.ml  scope_api.mli  scope_api_sig.ml  scope_builder.ml  scope_builder.mli  scope_builder_sig.ml  ssa_api.ml  ssa_builder.ml
src/codemods/: annotate_cycles.ml  annotate_declarations.ml  annotate_empty_array.ml  annotate_empty_object.ml  annotate_escaped_generics.ml  annotate_exports.ml  annotate_exports_hardcoded_ty_fixes.ml  annotate_exports_imports.ml  annotate_exports_utils.ml  annotate_exports_validator.ml  annotate_implicit_instantiation.ml  annotate_literal_declarations.ml  annotate_lti.ml  annotate_object_declarations.ml  annotate_optional_properties.ml  annotate_react_hooks.ml  annotate_use_callback.ml  annotate_use_state.ml  dune  error_code_migration.ml  objmapi_to_keymirror.ml  remove_react_import.ml  rename_redefinitions.ml  replace_existentials.ml
src/commands/: applyCodeActionCommand.ml  astCommand.ml  autocompleteCommand.ml  autofixCommand.ml  batchCoverageCommand.ml  checkCommands.ml  checkContentsCommand.ml  clientConnectSimple.ml  clientEnv.ml  codemodCommand.ml  commandConnect.ml  commandConnectSimple.ml  commandConnectSimple.mli  commandExceptions.ml  commandInfo.ml  commandMeanKill.ml  commandSpec.ml  commandSpec.mli  commandUtils.ml  configCommand.ml  configCommands.ml  convertCommand.ml  coverageCommand.ml  cycleCommand.ml  dumpImplDepsCommand.ml  dumpTypesCommand.ml  dune  envBuilderDebugCommand.ml  findModuleCommand.ml  findRefsCommand.ml  fixCommand.ml  forceRecheckCommand.ml  foregroundCheckCommands.ml  genFlowFilesCommand.ml  getDefCommand.ml  getImportersCommand.ml  getImportsCommand.ml  graphCommand.ml  ideCommand.ml  initCommand.ml  (+20 more)
src/common/: FlowJSON.ml  FlowJSON.mli  alpha_rename.ml  custom_printer.ml  db_blob.mllib  diff.ml  docblock.ml  dune  enclosing_context.ml  errors.ml  errors.mli  errors_js.ml  errors_js.mli  expensive.ml  expensive.mli  files.ml  files.mli  files_js.ml  files_js.mli  flowConfig.ml  flowConfig.mli  flowExitStatus.ml  flowExitStatus.mli  flowSymbol.ml  flowSymbol.mli  flow_import_specifier.ml  flow_import_specifier.mli  flow_logger.ml  flow_lsp_conversions.ml  flow_projects.ml  flow_projects.mli  flow_version.ml  haste_namespaces.ml  haste_namespaces.mli  hint.ml  hint.mli  js_number.ml  js_number.mli  listUtils.ml  loggingUtils.ml  (+30 more)
src/dts/: coverage.sh  dts_ast.ml  generate_exp.sh  lexer_dts.mll  parser_dts.ml  printer_dts.ml  runtests.sh  unique.py
src/embedded/: .depend  INDEX  flowlib.ml  flowlib.mli  flowlib_elf.c
src/flowlib/: dune  flowlib.ml  flowlib.mli
src/graphql/: graphql_ast.ml  graphql_builtins.ml  graphql_config.ml  graphql_conv.ml  graphql_debug.ml  graphql_flow.ml  graphql_json_schema.ml  graphql_lexer.ml  graphql_lexer.mll  graphql_parse.ml  graphql_parser.ml  graphql_parser.mly  graphql_parsing.ml  graphql_parsing.mli  graphql_schema.ml  graphql_schema2.ml  graphql_statement.ml  graphql_validation.ml
src/hack_forked/: _tags
src/heap/: _tags  dune  entityHeap.ml  entityHeap.mli  globalStorage.ml  hh_assert.c  hh_assert.h  hh_dummy.ml  hh_shared.c  hh_shared.h  hh_shared.js  ident.ml  ident.mli  localCache.ml  localCache.mli  prefix.ml  prefix.mli  sharedMem.ml  sharedMem.mli  value.mli  workerCancel.ml  workerCancel.mli
src/js/: caml_mutex_new.js  caml_thread_cleanup.js  caml_thread_initialize.js  unix.js
src/logging/: dune
src/lsp/: documentSymbolProvider.ml  documentSymbolProvider.mli  dune  flowLsp.ml  flowLsp.mli  lspErrors.ml  lspErrors.mli  lspInteraction.ml  lspInteraction.mli  selectionRangeProvider.ml  selectionRangeProvider.mli
src/monitor/: dune  fileWatcher.ml  fileWatcherStatus.ml  flowServerMonitor.ml  flowServerMonitor.mli  flowServerMonitorDaemon.ml  flowServerMonitorDaemon.mli  flowServerMonitorOptions.ml  flowServerMonitorServer.ml  flowServerMonitorServer.mli  monitorRPC.ml  monitorRPC.mli  persistentConnectionMap.ml  persistentConnectionMap.mli  requestMap.ml  (+7 more)
(+20552 files in other folders)
