opam-version: "2.0"
name: "flow_parser"
version: "0.131.0"
maintainer: "flow@fb.com"
authors: ["Flow Team <flow@fb.com>"]
homepage: "https://github.com/facebook/flow/tree/master/src/parser"
bug-reports: "https://github.com/facebook/flow/issues"
license: "MIT"

build: [ make "-C" "src/parser" "build-parser" ]
install: [ make "-C" "src/parser" "ocamlfind-install"]
depends: [
  "ocaml" {>= "4.07.1"}
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "ppx_deriving" {build}
  "ppx_gen_rec" {build}
  "sedlex" {= "2.1"}
  "wtf8"
]
dev-repo: "git+https://github.com/facebook/flow.git"
synopsis: "The Flow parser is a JavaScript parser written in OCaml"
description: """
It produces an AST that conforms to ESTree. The Flow Parser can be compiled to native code or can be compiled to JavaScript using js_of_ocaml.

To find out more about Flow, check out <https://flow.org>."""
