opam-version: "2.0"
name: "flow_parser"
version: "0.230.0"
maintainer: "flow@fb.com"
authors: ["Flow Team <flow@fb.com>"]
homepage: "https://github.com/facebook/flow/tree/master/src/parser"
bug-reports: "https://github.com/facebook/flow/issues"
license: "MIT"

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.2"}
  "base" {>= "v0.14.1"}
  "ppxlib" {>= "0.26.0"}
  "ppx_deriving" {build}
  "ppx_gen_rec" {build}
  "wtf8"
]
dev-repo: "git+https://github.com/facebook/flow.git"
synopsis: "The Flow parser is a JavaScript parser written in OCaml"
description: """
It produces an AST that conforms to ESTree. The Flow Parser can be compiled to native code or can be compiled to JavaScript using js_of_ocaml.

To find out more about Flow, check out <https://flow.org>."""
