opam-version: "2.0"
name: "flowtype"
version: "0.139.0"
maintainer: "flow@fb.com"
authors: "Flow Team <flow@fb.com>"
license: "MIT"
homepage: "https://flow.org"
doc: "https://flow.org/en/docs/getting-started/"
bug-reports: "https://github.com/facebook/flow/issues"
depends: [
  "ocaml" {>= "4.07.1"}
  "base" {= "v0.12.2"}
  "base-unix"
  "base-bytes"
  "dtoa" {>= "0.3.1"}
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "ocaml-migrate-parsetree" {build}
  "ounit" {with-test}
  "sedlex" {= "2.1"}
  "lwt" {>= "4.5.0" & < "5.0.0"}
  "lwt_log" {>= "1.1.0"}
  "lwt_ppx" {>= "1.2.4" < "2.0.0"}
  "ppx_let" {>= "0.11.0"}
  "ppx_deriving" {build}
  "ppx_gen_rec" {build}
  "ppx_tools_versioned" {build}
  "visitors" {build}
  "wtf8"
]
build: ["env" "FLOW_RELEASE=1" make]
depexts: ["linux-headers"] {os-distribution = "alpine"}
dev-repo: "git+https://github.com/facebook/flow.git"
synopsis: "Flow is a static typechecker for JavaScript"
description: """
To find out more about Flow, check out <https://flow.org>.

Flow adds static typing to JavaScript to improve developer productivity and
code quality. In particular, static typing offers benefits like early error
checking, which helps you avoid certain kinds of runtime failures, and code
intelligence, which aids code maintenance, navigation, transformation, and
optimization.

We have designed Flow so developers can reap its benefits without losing the
"feel" of coding in JavaScript. Flow adds minimal compile-time overhead, as it
does all its work proactively in the background. And Flow does not force you to
change how you code -- it performs sophisticated program analysis to work with
the idioms you already know and love."""
