opam-version: "2.0"
name: "flowtype"
version: "0.271.0"
maintainer: "flow@fb.com"
authors: "Flow Team <flow@fb.com>"
license: "MIT"
homepage: "https://flow.org"
doc: "https://flow.org/en/docs/getting-started/"
bug-reports: "https://github.com/facebook/flow/issues"
depends: [
  "ocaml" {>= "5.2.0"}
  "base" {>= "v0.17.1"}
  "base-unix"
  "base-bytes"
  "camlp-streams" {>= "5.0.1"}
  "dtoa" {>= "0.3.2"}
  "fileutils" {>= "0.6.4"}
  "flow_parser" {= "0.271.0"}
  "inotify" {os = "linux" & >= "2.4.1"}
  "ounit2" {with-test}
  "lwt" {>= "5.7.0"}
  "lwt_log" {>= "1.1.1"}
  "lwt_ppx" {>= "2.1.0"}
  "ppxlib" {>= "0.32.1" & < "0.36.0"}
  "ppx_expect" {>= "0.17.0"}
  "ppx_expect" {>= "0.17.0"}
  "ppx_let" {>= "0.14.0"}
  "ppx_deriving" {build}
  "ppx_gen_rec" {build}
  "visitors" {build}
  "wtf8"
]
build: ["dune" "build" "-p" name "-j" jobs]
depexts: ["linux-headers"] {os-distribution = "alpine"}
dev-repo: "git+https://github.com/facebook/flow.git"
synopsis: "Flow is a static typechecker for JavaScript"
description: """
To find out more about Flow, check out <https://flow.org>.

Flow adds static typing to JavaScript to improve developer productivity and
code quality. In particular, static typing offers benefits like early error
checking, which helps you avoid certain kinds of runtime failures, and code
intelligence, which aids code maintenance, navigation, transformation, and
optimization.

We have designed Flow so developers can reap its benefits without losing the
"feel" of coding in JavaScript. Flow adds minimal compile-time overhead, as it
does all its work proactively in the background. And Flow does not force you to
change how you code -- it performs sophisticated program analysis to work with
the idioms you already know and love."""
