[workspace]
members = [
  "crates/flow_aloc",
  "crates/flow_analysis",
  "crates/flow_cgroup",
  "crates/flow_cli",
  "crates/flow_codemods",
  "crates/flow_commands_connect",
  "crates/flow_common",
  "crates/flow_common_build_id",
  "crates/flow_common_cycle_hash",
  "crates/flow_common_errors",
  "crates/flow_common_exit",
  "crates/flow_common_exit_status",
  "crates/flow_common_leb128",
  "crates/flow_common_modulename",
  "crates/flow_common_semver",
  "crates/flow_common_socket",
  "crates/flow_common_tarjan",
  "crates/flow_common_transaction",
  "crates/flow_common_ty",
  "crates/flow_common_utils",
  "crates/flow_common_vcs",
  "crates/flow_common_xx",
  "crates/flow_config",
  "crates/flow_daemon",
  "crates/flow_data_structure_wrapper",
  "crates/flow_dfind",
  "crates/flow_dot_js_wasm",
  "crates/flow_edenfs_watcher",
  "crates/flow_env_builder",
  "crates/flow_env_builder_resolver",
  "crates/flow_event_logger",
  "crates/flow_event_logger_common",
  "crates/flow_event_logger_lwt",
  "crates/flow_flowlib",
  "crates/flow_heap",
  "crates/flow_heap_serialization",
  "crates/flow_hh_json",
  "crates/flow_hh_logger",
  "crates/flow_imports_exports",
  "crates/flow_interaction_logger",
  "crates/flow_lazy",
  "crates/flow_lint_settings",
  "crates/flow_logging_utils",
  "crates/flow_lsp",
  "crates/flow_lsp_server",
  "crates/flow_lwt_sys_utils",
  "crates/flow_monitor_rpc",
  "crates/flow_packed_locs",
  "crates/flow_parser",
  "crates/flow_parser_utils",
  "crates/flow_parser_utils_output",
  "crates/flow_parser_wasm",
  "crates/flow_parsing",
  "crates/flow_print_signal",
  "crates/flow_procfs",
  "crates/flow_profiling",
  "crates/flow_saved_state",
  "crates/flow_saved_state_fetcher",
  "crates/flow_server",
  "crates/flow_server_command_handler",
  "crates/flow_server_env",
  "crates/flow_server_file_watcher_spec",
  "crates/flow_server_files",
  "crates/flow_server_monitor",
  "crates/flow_server_rechecker",
  "crates/flow_server_utils",
  "crates/flow_server_watchman_expression_terms",
  "crates/flow_services_autocomplete",
  "crates/flow_services_code_action",
  "crates/flow_services_coverage",
  "crates/flow_services_export",
  "crates/flow_services_export_index",
  "crates/flow_services_get_def",
  "crates/flow_services_inference",
  "crates/flow_services_inference_types",
  "crates/flow_services_jsx",
  "crates/flow_services_module",
  "crates/flow_services_references",
  "crates/flow_services_type_info",
  "crates/flow_services_type_of_name",
  "crates/flow_tokio_runtime",
  "crates/flow_type_sig",
  "crates/flow_typing",
  "crates/flow_typing_builtins",
  "crates/flow_typing_context",
  "crates/flow_typing_debug",
  "crates/flow_typing_default",
  "crates/flow_typing_errors",
  "crates/flow_typing_exists_check",
  "crates/flow_typing_flow_common",
  "crates/flow_typing_flow_js",
  "crates/flow_typing_generics",
  "crates/flow_typing_implicit_instantiation_check",
  "crates/flow_typing_key",
  "crates/flow_typing_loc_env",
  "crates/flow_typing_speculation_state",
  "crates/flow_typing_spread_cache",
  "crates/flow_typing_statement",
  "crates/flow_typing_tvar",
  "crates/flow_typing_ty_normalizer",
  "crates/flow_typing_type",
  "crates/flow_typing_utils",
  "crates/flow_typing_visitors",
  "crates/flow_utils_concurrency",
  "crates/flow_utils_find",
  "crates/flow_utils_tty",
  "crates/flow_utils_union_find",
  "crates/flow_watchman",
]
resolver = "2"
