(env
 (opt
  (js_of_ocaml
    (compilation_mode whole_program)
    (flags :standard --opt 3))))

(executable
 (name flow)
 (modes native byte_complete)
 (modules flow)
 (libraries
  flow_glean
  flow_commands
  flow_exit_status
  flow_extra_commands
  flow_logging_utils
  flow_parser
  lz4 ; see dune-workspace
  ))
