(library
  (name heap_libc)
  (wrapped false)
  (modules)
  (c_names
    hh_assert
    hh_shared)
  (c_flags (:standard
    (:include config/c_flags.sexp)))
  (c_library_flags (:standard
    (:include config/c_library_flags.sexp)))
  (libraries
    utils_core))

(library
  (name heap_ident)
  (wrapped false)
  (modules
    ident)
  (libraries
    collections
    heap_libc)
  (preprocess (pps ppx_deriving.std visitors.ppx)))

(library
  (name heap_shared_mem)
  (wrapped false)
  (modules
    prefix
    sharedMem
    value)
  (libraries
    heap_libc
    logging_common
    utils_core
    worker_cancel))

(library
  (name worker_cancel)
  (wrapped false)
  (modules
    workerCancel)
  (libraries
    heap_libc
    utils_core))

(library
  (name heap_global_storage)
  (wrapped false)
  (modules
    globalStorage)
  (libraries
    heap_libc))
