(library
  (name procs_bucket)
  (wrapped false)
  (modules
    bucket)
  (libraries
    core_kernel
    imported_core))

(library
  (name procs_procs)
  (wrapped false)
  (modules
    mem_profile
    multiThreadedCall
    multiWorker
    worker
    workerController)
  (libraries
    core_kernel
    heap_shared_mem
    marshal_tools
    procs_bucket
    sys_utils
    worker_cancel))

; procs_lwt depends on Flow files that are outside the dune project
; we will need to add a dune public library definition in Flow for that
