(library
  (name flow_version)
  (wrapped false)
  (modules flow_version))

(library
  (name flow_common)
  (wrapped false)
  (modules (:standard \ flow_version flow_lsp_conversions))
  (flags -w +a-4-6-29-35-44-48-50)
  (libraries
    flow_common_lints
    flow_common_span
    flow_common_utils
    flow_logging
    flow_parser_utils_aloc
    flow_version
    heap_ident ; hack
    hh_json ; hack
    sys_utils ; hack
    ))
