(library
 (name flow_parser)
 (public_name flow_parser)
 (wrapped false)
 (modules
  (:standard \ flow_parser_js flow_parser_dot_js libflowparser))
 (libraries base sedlex wtf8 flow_sedlexing collections)
 (preprocess
  (pps ppx_gen_rec ppx_deriving.std sedlex.ppx)))

; dune build ./libflowparser.exe.o

(executable
  (name libflowparser)
  (modes (native object))
  (modules libflowparser)
  (flags (-runtime-variant=_pic))
  (libraries flow_parser))

(library
 (name flow_parser_js)
 (modules flow_parser_js)
 (libraries flow_parser js_of_ocaml))

(executable
 (name flow_parser_dot_js)
 (modes js)
 (modules flow_parser_dot_js)
 (js_of_ocaml
  (flags :standard --no-extern-fs))
 (libraries flow_parser_js))

(dirs
 (:standard __tests__))
