(library
 (name flow_parser_utils)
 (wrapped false)
 (libraries
  cycle_hash
  dtoa
  flow_common
  flow_common_utils
  flow_common_utils_loc_utils
  flow_common_tarjan
  flow_parser
  flow_parser_utils_signature_builder
  flow_typing_polarity
  hh_json ; hack
  )
 (preprocess
  (pps ppx_let ppx_deriving.std)))
