(library
 (name flow_parsing_docblock)
 (wrapped false)
 (modules docblock_parser)
 (libraries flow_common))

(library
 (name flow_parsing)
 (wrapped false)
 (modules parsing_service_js)
 (libraries
  flow_common
  flow_monitor_rpc
  flow_exports
  flow_procs
  flow_parsing_docblock
  flow_service_inference_module
  flow_state_heaps_parsing
  flow_state_readers
  xx
  flow_remote_execution)
 (preprocess
  (pps lwt_ppx)))
