(* -*- tuareg -*- *)

let library_entry name suffix =
  Printf.sprintf
"(library
  (name %s)
  (wrapped false)
  (modules)
  (libraries %s_%s))" name name suffix

let fb_entry name =
  library_entry name "fb"

let stubs_entry name =
  library_entry name "stubs"

let entry is_fb name =
  if is_fb then
    fb_entry name
  else
    stubs_entry name

let () =
  (* test presence of facebook subfolder *)
  let current_dir = Sys.getcwd () in
  (* we are in src/remote_execution/, locate src/remote_execution/facebook/dune *)
  let fb_dune = Filename.(concat (concat current_dir "facebook") "dune") in
  let is_fb = Sys.file_exists fb_dune in
  Jbuild_plugin.V1.send (entry is_fb "flow_remote_execution")
