(library
  (name flow_server)
  (wrapped false)
  (libraries
    flow_exit_status
    logging_common_lwt
    flow_logging_utils
    flow_monitor_rpc
    flow_procs
    flow_server_env
    flow_server_files
    flow_server_monitor_listener
    flow_server_rechecker
    flow_service_inference
    flow_flowlib
  )
  (preprocess (pps lwt_ppx))
)
