(executable
  (name discover)
  (libraries
    imported_core
    dune.configurator))

(rule
  (targets c_flags.sexp c_library_flags.sexp)
  (deps
    (env_var EXTRA_INCLUDE_PATHS)
    (env_var EXTRA_LIB_PATHS)
    (env_var EXTRA_NATIVE_LIBRARIES)
    (env_var EXTRA_LINK_OPTS))
  (action (run ./discover.exe)))
