(library
  (name flow_codemod_utils)
  (wrapped false)
  (libraries
    flow_logging_utils
    flow_parser_utils
    flow_typing
    flow_server
    flow_server_env
    flow_server_utils
    flow_service_inference
    flow_state_heaps_diffing
    flow_state_readers
    flow_code_action
    flow_flowlib
  )
  (preprocess (pps lwt_ppx ppx_let))
)
